fixed front page rotator dots spacing

--- a/sites/all/themes/gardenwalk/css/local.css
+++ b/sites/all/themes/gardenwalk/css/local.css
@@ -131,8 +131,7 @@ h1, h2, h3, h4, h5, h6 {
 -------------------------------------------------------------- */
 #header-group {
   background: white url("../images/dot-border-horiz-tan.png") no-repeat bottom center;
-  padding-bottom: 15px;
-  margin-bottom: 20px; }
+  padding-bottom: 15px; }
 
 #header-site-info {
   width: 480px; }
@@ -296,5 +295,6 @@ h1, h2, h3, h4, h5, h6 {
 
 /* Image Rotator (Front Page)
 -------------------------------------------------------------- */
-.panel-display .panel-col-top {
+.panel-3col-33-stacked .panel-col-top .inside {
+  padding-bottom: 20px;
   background: white url("../images/dot-border-horiz-tan.png") no-repeat bottom center; }
